--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<header>
- <% include ../views/partials/_header.ejs %>
-</header>
-<body>
-<h1> Test </h1>
-<p>
-<% for(key in urls) { %> </p>
+  <header>
+  <% include ../views/partials/_header.ejs %>
+  </header>
+    <body>
+      <h1> Test </h1>
 
- <a href="/urls/<%= key %>">
- <%=key %> </a>
-<% } %>
+    <p> <% for(key in urls) { %> </p>
+      <a href="/urls/<%= key %>">
+        <%=key %> </a>
+
+      <form method="POST" action="/urls/<%= key %>?_method=DELETE">
+        <button type="submit">Delete</button>
+      </form>
+    <% } %>
+
 
 </body>
 </html>
