final day 2 copy of url-index

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -9,6 +9,9 @@
     <p> <% for(key in urls) { %> </p>
       <a href="/urls/<%= key %>">
         <%=key %> </a>
+        -->
+        <a href="<%= urls[key] %>"> <%= urls[key] %> </a>
+
 
       <form method="GET" action="/urls/<%= key %>/edit?">
         <button type="submit">Edit</button>
