unedited version of the url shortener

--- a/views/urls_edits.ejs
+++ b/views/urls_edits.ejs
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Short URL: <%= shortURL %> </h1>
-<a href="<%= urls[shortURL] %>"> <%=urls[shortURL] %> </a>
+<a href="<%= longURL %>"> <%= longURL %> </a>
 
 </body>
 </html>
