--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -5,9 +5,9 @@
 
   <br>
 
-    <form method="POST" action="/urls/<%= key %>/edit?_method=PUT">
+    <form method="POST" action="/urls/<%= shortURL %>/edit?_method=PUT">
       <label for="editURL">Edit your URL:</label>
-      <input id="editURL" type="text" name="<%= shortURL%>" placeholder="<%= urls[shortURL] %>" style="width: 300px">
+      <input id="editURL" type="text" name="newURL" value="<%= longURL %>" style="width: 300px">
       <input type="submit" value="Update">
     </form>
 
