--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -6,18 +6,18 @@
     <body>
       <h1> List of shortened URLs! </h1>
 
-    <p> <% for(key in urls) { %> </p>
-      <a href="/urls/<%= key %>">
-        <%=key %> </a>
+  <% for(url of urls) { %>
+      <a href="/urls/<%= url.shortURL %>">
+        <%= url.shortURL %> </a>
         -->
-        <a href="<%= urls[key] %>"> <%= urls[key] %> </a>
+        <a href="<%= url.longURL %>"> <%= url.longURL %> </a>
 
 
-      <form method="GET" action="/urls/<%= key %>/edit?">
+      <form method="GET" action="/urls/<%= url.shortURL %>/edit?">
         <button type="submit">Edit</button>
       </form>
 
-      <form method="POST" action="/urls/<%= key %>?_method=DELETE">
+      <form method="POST" action="/urls/<%= url.shortURL %>?_method=DELETE">
         <button type="submit">Delete</button>
       </form>
 
