final version for revision

--- a/views/urls_edits.ejs
+++ b/views/urls_edits.ejs
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<body>
+  <body>
+    <head>
+      <title>Full URL</title>
+    </head>
 
-<h1>Short URL: <%= shortURL %> </h1>
-<a href="<%= longURL %>"> <%= longURL %> </a>
+    <h1>Short URL: <%= shortURL %> </h1>
+    <a href="<%= longURL %>"> <%= longURL %> </a>
 
-</body>
+  </body>
 </html>
