--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
+  <head>
+    <title>Create New URL</title>
+  </head>
   <body style="font-size:20px; padding:50px;">
     <% include partials/_header %>
     <h1>Insert link to shorten!</h1>
     <form action="/urls" method="POST" style="margin:150px;">
       <label for="longURL">Enter a URL:</label>
-      <input id="longURL" type="text" name="URL" placeholder="http://" style="width: 300px">
+      <input id="longURL" type="text" name="URL" value="http://" style="width: 300px">
       <input type="submit" value="Submit">
     </form>
   </body>
