--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -6,7 +6,7 @@
   <body>
     <h1>Short URL: <%= shortURL %> </h1>
     <br>
-    <form method="POST" action="/urls/<%= shortURL %>/edit?_method=PUT">
+    <form method="POST" action="/urls/<%= shortURL %>?_method=PUT">
       <label for="editURL">Edit your URL:</label>
       <input id="editURL" type="text" name="newURL" value="<%= longURL %>" style="width: 300px">
       <input type="submit" value="Update">
