Add login feature

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,2 +1,7 @@
 <meta charset="UTF-8">
 <title>URL Server</title>
+
+  <form method="POST" action="/login">
+        <input type="submit" value="sign in">
+        <input type="text" name="username" placeholder="username">
+  </form>
