--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <% include partials/_header %>
     <title>Edit your URL</title>
   </head>
   <body>
